<resources>
    <string name="app_name">Computer Technology</string>
    <string name="CollegeName">Shyamoli Ideal Polytechnic Institute</string>
    <string name="signUpTeacher">Don\'t Have Account ? Teacher</string>
    <string name="signUpStudent">Don\'t Have Account ? Student</string>
    <string name="login">LogIn</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="email">Email</string>
    <string name="computer_department">Computer Department</string>
    <string name="password">Password</string>
    <string name="welcomeText">Welcome To Computer Department</string>
    <string name="choose_semester">Choose Semester</string>
    <string name="roll">Enter your Board Roll</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account ?</string>
    <string name="title_activity_sign_up_teacher">SignUpTeacher</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="welcome_to_laboratory">Welcome to Laboratory</string>
    <string name="programming_lab">Programming Lab</string>
    <string name="database_lab">Database Lab</string>
    <string name="networking_lab">Networking Lab</string>
    <string name="hardware_lab">Hardware Lab</string>
    <string name="welcome_img">welcomeImage</string>
    <string name="welcome_text_department">Welcome to Computer Department</string>
    <string name="dev_info">By\n Jubayed and His Team</string>
    <string name="app_info_splash">Computer Technology of\n SIPI</string>
    <string name="logo_splash">logo splash</string>
    <string name="shahinur_sir_description">"Shahinur Islam Shahin is a Chief instructor of Computer Science and Technology at Shyamoli Ideal Polytechnic Institute , He is Completed his Bachelor of Science(BSC) In Computer Science and Engineering(CSE) at Dhaka International University "</string>
    <string name="masood_sir_description">"Masood Ranna is a Junior instructor of Computer Science and Technology at Shyamoli Ideal Polytechnic Institute , He is Completed his Bachelor of Science(BSC) In Computer Science and Engineering(CSE) at Bangladesh University "</string>
    <string name="palash_sir_description">"Palash Chandra Biswas is a Instructor of Computer Science and Technology at Shyamoli Ideal Polytechnic Institute , He is Completed his Master of Science(MSC) In Computer Science and Engineering(CSE) at Jahangirnagar University and also completed Bachelor of Science(BSC) In Computer Science and Engineering(CSE) at Bangladesh University "</string>
    <string name="rubia_mam_description">"Rubaia Amina is a instructor of Computer Science and Technology at Shyamoli Ideal Polytechnic Institute , She is Completed her Master of Science(MSC) and Bachelor of Science(BSC) In Computer Science and Engineering(CSE) at  American International University"</string>

    <string name="teacher_logo">teacher logo</string>
    <string name="principal_msg">It is with great pleasure and enthusiasm that I extend my warmest welcome to all the students, faculty members, and students of Shyamoli Ideal Polytechnic Institute.</string>
    <string name="director_msg">I extend a warm and hearty welcome to each of you as the Director of Shyamoli Ideal Polytechnic Institute. It is an honor to lead an institution that is not just an educational establishment but a dynamic ecosystem fostering innovation, academic excellence, and personal growth.</string>

    <!--    lorem string  -->
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n
    </string>

    <!--    for exam notice -->
    <string name="exam_notice_description">Applicability:All Semesters students\n\n

Dear Students,\n\n

It is to here by inform you that your SIPI Examination (Final Semesters Exam) will be held from 01-Nov -2023 onwards. It is compulsory for all the students to attempt the test. In case of absent, student will be responsible for non-processing of the result as per the scheme of examination.\n

Semester Final STEPS / INSTRUCTIONS\n\n

1. Online Exam will be conducted for all Semesters students on MCQ based method.\n

2. The duration of the test will be 1 Hour and there will be no negative marking in the test.\n

3. There will be four choices for each question. Only one of these choices is correct. Student has to choose only one of the four choices as correct answer.\n

4. Click on Start Test to read the test instructions/information.\n

5. After reading test information click on Start Test.\n

6. Read question carefully, tick ONE correct option from A, B, C, D and click on Save / Mark and Submit.\n

7. Test will automatically get closed if the duration of the test is over.\n
Note: It is compulsory to clear all pending dues, submit pending assignments. Those who fail to comply, will be liable to face consequences. In case of doubt, contact on 7723930504 immediately.\n

MA Sattar
Principal</string>

    <string name="victory_notice_description">The celebration of Victory Day has been taking place since 1972. The Bangladesh Liberation War became a topic of great importance in cinema, literature, history lessons at school, the mass media, and the arts in Bangladesh. The ritual of the celebration gradually obtained a distinctive character with a number of similar elements: Military Parade by the Bangladesh Armed Forces at the National Parade Ground, ceremonial meetings, speeches, lectures, receptions and fireworks displays.[13] Victory Day in Bangladesh is a joyous celebration in which popular culture plays a great role. TV and radio stations broadcast special programs and patriotic songs.[14] The main streets are decorated with national flags. Different political parties and socioeconomic organisations undertake programs to mark the day in a befitting manner, including the paying of respects at Jatiyo Smriti Soudho, the national memorial at Savar in Dhaka District\n \n All the students have been asked to participate in College Function and other activities at 7 am following the health rules on the occasion of 16 December Victory day \'s Day celebration.\n\nThe Principal</string>
    <string name="due_payment_notice">** Notice Pending Dues: Clear Your Dues Now and Avoid Late Fee Charges **\n\nIn continuation to earlier notices, we would like to remind all students to clear their pending dues (Academic/Transport/Hostel, etc.) immediately without any further delay. Timely payment is essential to avoid inconvenience and additional charges. Failure to comply with this notice will result in the imposition of late fee charges, as outlined below:\n\n– For the period from 19th February 2023 to 28th February 2023, a late fee fine of Rs 30/- per day will be applicable.\n– From 1st March 2023 to 14th March 2023, a late fee fine of Rs 1000/- will be applicable.\n– For the period from 15th March 2023 to 30th March 2023, a late fee fine of Rs 2000/- will be applicable.\n\nIt is crucial to settle all pending dues before the specified deadlines to avoid these late fee charges. Please note that after 30th March 2023, students with pending dues will not be allowed to attend classes or utilize the Transport/Hostel facility. Furthermore, their names will be struck off from the ERP for attendance purposes.\n\nWe urge all students to take immediate action and clear their pending dues to ensure uninterrupted access to educational resources and facilities. Non-compliance with this notice will result in significant disruptions to your academic journey.\n\nTo rectify the situation, students will be required to seek special permission and apply for the re-registration process. Please note that a charge of Rs 5000/- will be applicable for the re-registration process.\n\nWe understand the importance of timely payments and their impact on the smooth functioning of academic activities. Therefore, we kindly request all students to fulfill their financial obligations promptly to maintain a conducive learning environment.\n\nFor any queries or assistance regarding pending_dues and payment procedures, please contact the concerned authorities. Let’s take immediate action and clear our pending dues to ensure a seamless educational experience for everyone.\n\n</string>
    <string name="february_21st">Bangladeshis celebrate International Mother Language Day by placing flowers at the Martyrs Monument and its replicas.[31] A public holiday in the country since 1953,[32] it is also known as Shohid Dibôsh (Martyr Day). On 17 November 1999, the UNESCO General Conference recognized 21 February as International Mother Language Day.[33] Bangladeshis organize social gatherings honoring their language and culture, hold literary competitions, draw alpana on the roads, eat festive meals and listen to songs.[31][34] Bangla Academy arranges Ekushey Book Fair in Dhaka for the whole month of February,All the students have been asked to participate in College Function and other activities at 7 am following the health rules on the occasion of February 21st international mother language for Bangla Language\'s Day celebration.\n\nthe principal</string>
    <string name="notice_for_independence_day">Independence Day is commonly associated with parades, political speeches, fairs, concerts, ceremonies, and various other public and private events celebrating the history and traditions of Bangladesh. TV and radio stations broadcast special programs and patriotic songs in honor of Independence Day. A thirty-one gun salute may be conducted in the morning.[12] The main streets are decorated with national flags. Different political parties and socioeconomic organizations undertake programs to mark the day in a befitting manner, including paying respects at National Martyrs\' Memorial at Savar near Dhaka.[12]\n\nGoogle displayed a doodle commemorating the Independence Day of Bangladesh on 26 March 2017 on their bd domain.[13] The same year celebrations were organised in Tripura, India, by Bangladesh deputy high commissioner stationed there.[14]\n\n2021 marked the Golden Jubilee of the Independence of Bangladesh from Pakistan \n \n All the students have been asked to participate in College Function and other activities at 7 am following the health rules on the occasion of 26th March day \'s Day celebration.\n\nthe principal</string>

</resources>