<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".student.Student_Add">

    <!--image view-->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="student add"
        android:src="@drawable/sipi_logo" />

    <!--    welcome text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/CollegeName"
        android:textAlignment="center"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--name here -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Name"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/person_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stdName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <!--  board roll  -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/roll"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/board_roll_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stdRoll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <!--    section code here-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Section"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/section_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stdSection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <!--department code here-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Department"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/department_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stdDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <!--choose semester-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginTop="5dp"
                app:endIconDrawable="@drawable/arrow_down">

                <AutoCompleteTextView
                    android:id="@+id/autoItem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lato"
                    android:inputType="none"
                    android:text="@string/choose_semester" />


            </com.google.android.material.textfield.TextInputLayout>

            <!--phone number code-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Phone Number"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/phone_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stdPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <!--button code here-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/studentAdd"
                android:layout_width="200dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="#78d2a5"
                android:fontFamily="@font/lato"
                android:text="Add Student"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:strokeColor="#2196F3"
                app:strokeWidth="1dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>

    </ScrollView>

</LinearLayout>